--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
-    "@scalar/express-api-reference": "^0.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
@@ -24,9 +23,15 @@
     "express": "^5.1.0",
     "nanoid": "^5.1.5",
     "prisma": "^6.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
